--- a/build
+++ b/build
@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 
-if [$# -lt 1 ]; then
+if [ $# -lt 1 ]; then
 	echo "Need a github token!"
 	exit 2
 fi
 
-docker build --build-arg ghtoken=${1} -t secscantest:1.0 .
+docker build --build-arg ghtoken=${1} -t secscantest .
